Address review: move CwidSkipAudit to model jar, bean validation, 201, write-once conditional put